добавил генерацию swagger для сервиса + правки
